# MagmaKernelC

./: .gitignore  Array.c  Array.h  ArrayTest.h  Assertions.c  Assertions.h  AssertionsTest.c  AssertionsTest.h  CMakeLists.txt  Core.c  Core.h  Instance.c  Instance.h  InstanceTest.c  InstanceTest.h  Main.c  Main.h  MetaAssert.c  MetaAssert.h  OOP.c  Optional.c  Optional.h  Test.c  Throwable.c  Throwable.h
src/: Core.h
src/collect/: Array.c  Array.h  ArrayList.c  ArrayList.h
src/test/: Assertions.h
test/: ArrayTest.c  ArrayTest.h  AssertionsTest.h  InstanceTest.h
test/collect/: ArrayListTest.c  ArrayListTest.h
